--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"husky": "^8.0.3",
 		"lint-staged": "^13.2.0",
 		"prettier": "^2.8.7",
-		"typescript": "5.0.3"
+		"turbo": "^1.9.1",
+		"typescript": "^5.0.3"
 	}
 }
