feat: tweaks to errors; tracing

--- a/services/example-service/Cargo.toml
+++ b/services/example-service/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 anyhow = { workspace = true }
 tokio = { workspace = true }
 tonic = { workspace = true }
+tracing = { workspace = true }
 
 macrostack-consul = { path = "../../crates/consul" }
 macrostack-protocol = { path = "../../common/protocol", features = ["hello"] }
+macrostack-tracing = { path = "../../crates/tracing" }
