--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,5 @@
+name: Build and push Docker images
+
 on:
   push:
     branches:
@@ -22,8 +24,11 @@ jobs:
           file: ./Dockerfile
           tags: ghcr.io/${{ github.repository_owner }}/macrostack-services:latest
           push: false
+          cache-from: type=registry,ref=user/app:latest
+          cache-to: type=inline
   
   build_services:
+    name: Build individual services
     runs-on: ubuntu-latest
     needs: build_workspace
     strategy:
