--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,14 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+      # login to ghcr
+      -
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       # build and push the docker images
       -
         name: Build all services
@@ -23,7 +31,7 @@ jobs:
           context: .
           file: ./Dockerfile
           tags: ghcr.io/${{ github.repository_owner }}/macrostack-services:latest
-          push: false
+          push: true
           cache-from: type=registry,ref=user/app:latest
           cache-to: type=inline
   
@@ -40,6 +48,14 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+      # login to ghcr
+      -
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       # build and push the docker images
       -
         name: Build all services
