ci: label docker image

--- a/infrastructure/modules/example-service/Dockerfile
+++ b/infrastructure/modules/example-service/Dockerfile
@@ -6,3 +6,7 @@ RUN apk --no-cache add ca-certificates
 
 COPY --from=builder /app/target/release/example-service /example-service
 ENTRYPOINT ["/example-service"]
+
+LABEL org.opencontainers.image.source=https://github.com/kaylendog/macrostack
+LABEL org.opencontainers.image.description="Macrostack example service"
+LABEL org.opencontainers.image.licenses=MIT/Apache-2.0
