--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,8 @@ name: Build and push Docker images
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - 'release/v**'
 
 permissions:
   packages: write
