--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build and push Docker images
 on:
   push:
     tags:
-      - 'release/v**'
+      - "release/v**"
 
 permissions:
   packages: write
@@ -15,20 +15,17 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       # setup docker and compose
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       # login to ghcr
-      -
-        name: Login to GitHub Container Registry
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
       # build and push the docker images
-      -
-        name: Build all services
+      - name: Build all services
         uses: docker/build-push-action@v2
         with:
           context: .
@@ -37,7 +34,7 @@ jobs:
           push: true
           cache-from: type=registry,ref=user/app:latest
           cache-to: type=inline
-  
+
   build_image:
     name: Build image
     runs-on: ubuntu-latest
@@ -48,20 +45,17 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       # setup docker and compose
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       # login to ghcr
-      -
-        name: Login to GitHub Container Registry
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
       # build and push the docker images
-      -
-        name: Build all services
+      - name: Build all services
         uses: docker/build-push-action@v2
         with:
           context: .
