--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           reporter: github-check # Change reporter.
-          eslint_flags: "src/"
+          eslint_flags: "."
 
   proto:
     name: Lint with protolint
