--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -24,7 +24,9 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '18'
-      - run: pnpm i
+      - uses: pnpm/action-setup@v2
+        with:
+          run_install: true
       - uses: reviewdog/action-eslint@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
