--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -45,6 +45,7 @@ jobs:
           level: warning
 
   clippy:
+    name: Lint with clippy
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
