--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"scripts": {
 		"prepare": "husky install"
 	},
-	"packageManager": "^pnpm@8.0.0",
+	"packageManager": "pnpm@8.2.0",
 	"engines": {
 		"node": "18"
 	},
