--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -49,13 +49,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - name: install clippy
+      - name: Install clippy
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
           override: true
           components: clippy
-
+      - uses: Swatinem/rust-cache@v2
       - uses: sksat/action-clippy@main
         with:
           reporter: github-check
