--- a/infrastructure/modules/gateway/deployment.yaml
+++ b/infrastructure/modules/gateway/deployment.yaml
@@ -1,22 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  namespace: macrostack
   name: gateway
 spec:
+  replicas: 5
   selector:
     matchLabels:
+      service: gateway
       app: gateway
   template:
     metadata:
       labels:
+        service: gateway
         app: gateway
+      annotations:
+        consul.hashicorp.com/connect-inject: "true"
+        consul.hashicorp.com/connect-service-upstreams: "example-service:50051"
     spec:
       containers:
         - name: gateway
-          image: macrostack/gateway:latest
+          readinessProbe:
+            tcpSocket:
+              port: 8080
+          image: ghcr.io/kaylendog/macrostack-gateway:latest
+          ports:
+            - containerPort: 8080
           resources:
             limits:
               memory: "128Mi"
               cpu: "500m"
-          ports:
-            - containerPort: 50051
+      imagePullSecrets:
+        - name: ghcr-token
