--- a/infrastructure/modules/gateway/service.yaml
+++ b/infrastructure/modules/gateway/service.yaml
@@ -1,10 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: gateway
-spec:
-  selector:
+  namespace: macrostack
+  name: gateway-service
+  labels:
     app: gateway
+spec:
+  type: ClusterIP
   ports:
     - port: 8080
       targetPort: 8080
+  selector:
+    app: gateway
