--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,9 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          tags: ghcr.io/${{ github.repository_owner }}/macrostack-services:latest
+          tags: | 
+            ghcr.io/${{ github.repository_owner }}/macrostack-services:latest
+            ghcr.io/${{ github.repository_owner }}/macrostack-services:${{ github.sha }}
           push: true
           cache-from: type=registry,ref=user/app:latest
           cache-to: type=inline
@@ -61,5 +63,5 @@ jobs:
           push: true
           file: ./infrastructure/modules/${{ matrix.service }}/Dockerfile
           tags: |
-            - ghcr.io/${{ github.repository_owner }}/macrostack-${{ matrix.service }}:latest
-            - ghcr.io/${{ github.repository_owner }}/macrostack-${{ matrix.service }}:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/macrostack-services:latest
+            ghcr.io/${{ github.repository_owner }}/macrostack-services:${{ github.sha }}
