--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,5 +63,5 @@ jobs:
           push: true
           file: ./infrastructure/modules/${{ matrix.service }}/Dockerfile
           tags: |
-            ghcr.io/${{ github.repository_owner }}/macrostack-services:latest
-            ghcr.io/${{ github.repository_owner }}/macrostack-services:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/macrostack-${{ matrix.service }}:latest
+            ghcr.io/${{ github.repository_owner }}/macrostack-${{ matrix.service }}:${{ github.sha }}
