--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
             ghcr.io/${{ github.repository_owner }}/macrostack-services:latest
             ghcr.io/${{ github.repository_owner }}/macrostack-services:${{ github.sha }}
           push: true
-          cache-from: type=registry,ref=kaylendog/macrostac:latest
+          cache-from: type=registry,ref=kaylendog/macrostack:latest
           cache-to: type=inline
 
   build_image:
