feat: add example service call

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ resolver = "2"
 [workspace.dependencies]
 anyhow = "1"
 prost = "0.11"
+serde = { version = "1", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 tonic = "0.9.1"
 tonic-build = { version = "0.9.1", features = ["prost"] }
