--- a/apps/gateway/Cargo.toml
+++ b/apps/gateway/Cargo.toml
@@ -12,6 +12,7 @@ warp = "0.3"
 anyhow = { workspace = true } 
 tokio = { workspace = true }
 tonic = { workspace = true }
+serde = { workspace = true }
 
 macrostack-protocol = { path = "../../common/protocol" }
 macrostack-tracing = { path = "../../crates/tracing" }
