ci: use commit hash variable; lint staged for tf and yaml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,12 +29,12 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          tags: | 
+          tags: |
             ghcr.io/${{ github.repository_owner }}/macrostack-services:latest
             ghcr.io/${{ github.repository_owner }}/macrostack-services:${{ github.sha }}
           push: true
-          cache-from: type=registry,ref=kaylendog/macrostack:latest
-          cache-to: type=inline
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
   build_image:
     name: Build image
