--- a/infrastructure/modules/gateway/deployment.yaml
+++ b/infrastructure/modules/gateway/deployment.yaml
@@ -23,7 +23,7 @@ spec:
           readinessProbe:
             tcpSocket:
               port: 8080
-          image: ghcr.io/kaylendog/macrostack-gateway:99ac83bc710c37c8f28852d40568a6ee37f8d554
+          image: ghcr.io/kaylendog/macrostack-gateway:${commit}
           ports:
             - containerPort: 8080
           resources:
