--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '18'
+          node-version: "18"
       - uses: pnpm/action-setup@v2
         with:
           run_install: true
@@ -56,6 +56,10 @@ jobs:
           override: true
           components: clippy
       - uses: Swatinem/rust-cache@v2
+      # install protoc
+      - uses: arduino/setup-protoc@v1
+        with:
+          version: "3.x"
       - uses: sksat/action-clippy@main
         with:
           reporter: github-check
