feat: ingress gateway

--- a/infrastructure/modules/example-service/deployment.yaml
+++ b/infrastructure/modules/example-service/deployment.yaml
@@ -20,7 +20,7 @@ spec:
         consul.hashicorp.com/connect-inject: "true"
         consul.hashicorp.com/connect-service-upstreams: "postgres:5432"
         consul.hashicorp.com/service-meta-version: "v1"
-        consul.hashicorp.com/service-tags: "api"
+        consul.hashicorp.com/service-tags: "service"
     spec:
       serviceAccountName: example-service
       containers:
