--- a/infrastructure/modules/nginx/service.yaml
+++ b/infrastructure/modules/nginx/service.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
+  name: nginx
   namespace: macrostack
-  name: gateway
   labels:
-    app: gateway
+    app: nginx
 spec:
   type: ClusterIP
   ports:
-    - protocol: TCP
-      port: 8080
+    - port: 80
+      targetPort: 80
   selector:
-    app: gateway
+    app: nginx
