--- a/infrastructure/modules/nginx/service-defaults.yaml
+++ b/infrastructure/modules/nginx/service-defaults.yaml
@@ -1,7 +1,7 @@
 apiVersion: consul.hashicorp.com/v1alpha1
 kind: ServiceDefaults
 metadata:
+  name: nginx
   namespace: macrostack
-  name: example-service
 spec:
-  protocol: "grpc"
+  protocol: "http"
