--- a/infrastructure/modules/nginx/config.yaml
+++ b/infrastructure/modules/nginx/config.yaml
@@ -31,8 +31,8 @@ data:
         proxy_request_buffering off;
         proxy_buffering off;
 
-        location /api {
-          proxy_pass http://127.0.0.1:8080;
+        location /api/ {
+          proxy_pass http://127.0.0.1:8080/;
         }
 
         error_page   500 502 503 504  /50x.html;
